fixing CSS layout bug, card drift on some screens

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body{
 }
 
 a:link {
-  color: 344, 17%, 74%, 0.8;}
+  color: hsl(344, 17%, 74%, 0.8);}
 a:visited {
   color: hsl(120, 100%, 25%, 0.4);}
 a:hover {
@@ -73,7 +73,7 @@ p{
 .spread-ten{
   background-color: #fffaf389;
   display: inline-grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(7, 0.5fr);
   grid-template-rows: repeat(4, 0.1fr);
   justify-self: center;
   max-width: 80%;
@@ -157,12 +157,17 @@ width: 7vw;
 height: 1.2rem;
 justify-self: center;
 border-radius: 1rem;
+background-color:hsl(33, 100%, 88%, 0.8);
+border-color: hsl(344, 17%, 74%, 0.8);
 }
 .delete-button{
   width: 6vw;
   height: 1.2rem;
   justify-self: center;
   border-radius: 1rem;
+  background-color:hsl(33, 100%, 88%, 0.8);
+  border-color: hsl(344, 17%, 74%, 0.8);
+
 
 }
 
